# paint-can-replacement

./: CMakeLists.txt  README.md  main.c
core/: cmd_hndl.c  commo.c  dispatcher.c  play.c  player.c  service.c  sts_q_id.c
drivers/: driver.c  servo.c  shock.c  strtstop.c  subcode.c
include/: cmd_hndl.h  commo.h  defs.h  driver.h  dsic2.h  gpio_map.h  player.h  serv_def.h  sts_q_id.h  timer.h
utils/: maths.c  timer.c
